--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body  { background-color:skyblue;
       <p>The Sri Lankan Buddhist Society of Calgary is a religious, non-profit charitable organization registered with the Government of Canada.
 
 We welcome anyone that wants to come and learn about Buddhism and what the Buddha taught.</p>
-<img src="images/1.jpg" alt="Group meditation photo" />
+<img src="1.jpg" with="800" height="533" />
 
     </section>
 
@@ -47,7 +47,7 @@ We welcome anyone that wants to come and learn about Buddhism and what the Buddh
         <li>Mindfulness Retreat – will be </li>
         <li>Get Ready for the Sinhala/ Tamil New Year Festival 2025.04.27 </li>
       </ul>
-<img src="images/2.jpg" alt="Meditation retreat" />
+<img src="images/2.jpg" />
 
     </section>
 
