--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ We welcome anyone that wants to come and learn about Buddhism and what the Buddh
         <li>Mindfulness Retreat – will be </li>
         <li>Get Ready for the Sinhala/ Tamil New Year Festival 2025.04.27 </li>
       </ul>
-<img src="images/2.jpg" />
+<img src="images/2.jpg"with="800" height="533" />
 
     </section>
 
